[tool.poetry]
name = "aiohttp_admin_site"
version = "0.0.1"
description = "Generator an admin interface based on aiohttp."
authors = ["KondartevAD <kondratev_ad@bk.ru>"]
maintainers = ["KondartevAD <kondratev_ad@bk.ru>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/KondratevAD/aiohttp_admin_site"
repository = "https://github.com/KondratevAD/aiohttp_admin_site"
#documentation = "https://aiohttp-admin-site.readthedocs.io"
keywords = ["aiohttp_admin_site", "admin interface", "aiohttp"]
packages = [
    { include = "aiohttp_admin_site" },
    { include = "aiohttp_admin_site/**/*" },
]
exclude = ["tests/**/*"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.3"
aiohttp-jinja2 = "^1.4.2"
aiopg = "^1.3.0"
SQLAlchemy = "^1.4.20"
sqlalchemy-stubs = "^0.4"
aiomysql = "^0.0.21"
motor = "^2.4.0"
umongo = "^3.0.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
